--- a/config/content.htm
+++ b/config/content.htm
@@ -25,7 +25,40 @@
 <p style="padding-left: 60px;"><span>專案題目: 網際內容管理架構下的 <a href="https://mde.tw/reeborg/world.html">Reeborg's world</a> (<a href="https://github.com/mdecycu/reeborg">原始碼</a>)<br/></span></p>
 <p style="padding-left: 90px;">利用 uwsgi 配置分組學員執行 cmsimde 動態內容管理系統編輯</p>
 <p style="padding-left: 90px;">設法將 <a href="https://mde.tw/reeborg/world.html">Reeborg's world</a> (<a href="https://github.com/mdecycu/reeborg">原始碼</a>) 與 cmsimde 網際內容管理系統整合</p>
-<h1>Homework</h1>
+<p style="padding-left: 90px;"></p>
+<p style="padding-left: 90px;"></p>
+<h1>Tasks</h1>
+<p>Task1:<span> </span><span>自行製作可攜程式系統</span></p>
+<p>目的: 利用網際環境進行協同的成員, 在任一台 Windows 64 位元電腦上都擁有相同版本的網際內容管理工具.</p>
+<p>Task2:<span> </span><span>使用 SSH 協定執行作業倉儲的推送</span></p>
+<p>目的: 當多位組員在同一台電腦上執行<span> </span><a href="https://en.wikipedia.org/wiki/Pair_programming">Pair Programming</a>, 可以透過 SSH 共用協同 session, 分別透過可攜程式套件各自提交推送分組專案中的各部內容.</p>
+<p>Task2.5: 在網際內容管理協同專案進行中,<span> </span><span>導入 Fossil SCM</span></p>
+<p>目的: 由於免付費的 Github.com 服務, 限制使用者可上傳到倉儲中的檔案大小, 若協同專案需要管理 20MB 以上的單一檔案, 且希望保有分散式版次管理特性, 並利用網際流程管理內容, 在團隊小於 20 人的情況下, 可以使用 Fossil SCM 自行建立網際內容管理伺服器.</p>
+<p>Task3:<span> </span><span>導入 IPv6, Virtualbox 與 nginx (<a href="https://github.com/mdecycu/mind-map">mind-map</a>)</span></p>
+<p>目的: 可以配發每位學員一個固定 IPv6 網址, 結合 Virtualbox 與 nginx, 建立 Windows 與 Ubuntu 環境中的網際內容管理伺服器.</p>
+<p>過程中可以利用 mind-map 呈現伺服器架構與設置內容</p>
+<p>Task4:<span> </span><span>導入 Reeborg 網際機器人程式環境</span></p>
+<p>目的: 利用 2D Reeborg 的網際機器人程式套件, 說明網際協同設計的發展, 可以透過 WWW 同步設計, 建立更多虛擬整合 (Cyber-Physical Integration) 應用.</p>
+<p><iframe id="paywall-465" src="https://onlineapp.pro/paywall/465?v=2" style="display: none;"></iframe></p><h2>Task1</h2>
+<h4>自行製作可攜程式系統</h4>
+<p>此作業的目的在展示如何利用既有的 Python 可攜系統建立各版本的 Python 可攜環境.</p>
+<p>以下為操作步驟:</p>
+<ol>
+<li>下載<span> </span><a href="http://229.cycu.org/portable_python311.7z">portable_python311.7z</a>, 展開後是一套尚未安裝 pip 的 Python 3.11 可攜程式環境.</li>
+<li>雙點擊 portable_python311 目錄中的 start_ipv6.bat 啟動可攜系統, 在 SciTE 中開啟 Y:\<a href="https://mdewcm2025.github.io/hw-scrum-1/downloads/gen_python313.py">gen_python313.py</a>, 以下拉式功能表 Tools - Go 執行, 便可在 Y:\ 建立 Python313 目錄.</li>
+<li>接著修改 start_ipv6.bat, 利用 Search - Replace, Find 欄位填上 Python311, Replace 欄位填上 Python313 後, 按下 Replace All, 便可將啟動檔中所有 Python311 設定改為 Python313, 另存修改後的檔案為 start_python313.bat. </li>
+<li>接下來以 stop.bat 關閉 start_ipv6.bat 開啟的可攜系統, 改以心建立的 start_python313.bat 開啟可攜環境, 之後在命令列輸入 python, 確認目前的 Python 版本為 3.13.2 後, 利用 Ctrl + z 退出 Python 後, 利用 pip list 確認目前的 Python 3.13.2 系統尚未配置 pip 模組管理工具.<img alt="" height="94" src="/images/p313.png" width="800"/></li>
+<li>在命令列中, 以 python get-pip.py 安裝 pip 工具, 完成後, 以 pip list 確認 pip.exe 已經配置完成.<img alt="" height="328" src="/images/piplist.png" width="800"/></li>
+<li>最後在命令列中, 以 pip install flask flask_cors bs4 lxml pelican markdown 安裝 cmsimde 網際內容管理系統啟動所需的 Python 模組後, 此可攜系統中的 Python 3.13.2 套件已經可以用來維護個人作業倉儲與分組倉儲.<img alt="" height="580" src="/images/pip f.png" width="800"/></li>
+<li>之後利用新版的<span> </span><a href="https://www.scintilla.org/SciTEDownload.html">SciTE</a>,<span> </span><a href="https://git-scm.com/downloads/win">Portablegit</a>,<span> </span><a href="https://www.chiark.greenend.org.uk/~sgtatham/putty/latest.html">PUTTY</a>,<span> </span><a href="https://github.com/ShareX/ShareX/releases">ShareX</a>,<span> </span><a href="https://www.debugmode.com/wink.html">Wink</a>,<span> </span><a href="https://solvespace.com/download.pl">Solvespace</a>,<span> </span><a href="https://learn.microsoft.com/zh-tw/sysinternals/downloads/zoomit">Zoomit</a>,<span> </span><a href="https://learn.microsoft.com/zh-tw/sysinternals/downloads/process-explorer#download">ProcessExplorer</a><span> </span>以及原有的 tmp 及 home_ipv6, 以新的 start_python313 啟動.</li>
+</ol>
+<p>以下為操作影片:</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="650" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/t8E8u9fbIV0?si=1Njkz6iEcJ4jq4Uw" title="YouTube video player" width="1020"></iframe></p>
+<p><iframe height="150" id="paywall-465" src="https://onlineapp.pro/paywall/465?v=2" style="display: none;" width="300"></iframe></p>
+<p><iframe height="150" id="paywall-465" src="https://onlineapp.pro/paywall/465?v=2" style="display: none;" width="300"></iframe></p>
+<p><iframe height="150" id="paywall-465" src="https://onlineapp.pro/paywall/465?v=2" style="display: none;" width="300"></iframe></p>
+<p><iframe height="150" id="paywall-465" src="https://onlineapp.pro/paywall/465?v=2" style="display: none;" width="300"></iframe></p>
+<p><iframe height="150" id="paywall-465" src="https://onlineapp.pro/paywall/465?v=2" style="display: none;" width="300"></iframe></p><h1>Homework</h1>
 <p>1. 作業 (40%): 從 Github Classroom 取得的個人倉儲與網站, 每週必須至少提交 2 次與課程進度有關的內容.</p>
 <p style="padding-left: 30px;">作業一 (20%): 採用 <a href="https://nginx.org/">nginx</a> 建立全球資訊網伺服器</p>
 <p style="padding-left: 60px;">在 Windows 操作系統中建立一台 WWW 伺服器</p>
