更新本地網頁網址

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,7 +1,8 @@
 <h1>About</h1>
 <p>課程名稱: 網際內容管理 - Web Content Management</p>
-<p>學員作業網站: (請自行填寫)</p>
-<p>學員作業倉儲: (請自行填寫)</p>
+<p>學員作業網站:  <a href="https://mdewcm2025.github.io/hw-linpastone/content/index.html">https://mdewcm2025.github.io/hw-linpastone/content/index.html</a></p>
+<p>學員作業倉儲:  <a href="https://github.com/mdewcm2025/hw-linpastone">https://github.com/mdewcm2025/hw-linpastone</a></p>
+<p>本地伺服器網頁： <a href="https://ryanpi.ddns.net/">https://ryanpi.ddns.net/</a></p>
 <hr/>
 <p>課程代號: wcm2025</p>
 <p>Teams 線上教學:</p>
@@ -57,7 +58,7 @@
 <p style="padding-left: 60px;">設法將 <a href="https://mde.tw/reeborg/world.html">Reeborg's world</a> (<a href="https://github.com/mdecycu/reeborg">原始碼</a>) 與 cmsimde 網際內容管理系統整合</p>
 <p><iframe height="150" id="paywall-465" src="https://onlineapp.pro/paywall/465?v=2" style="display: none;" width="300"></iframe></p>
 <p><iframe height="150" id="paywall-465" src="https://onlineapp.pro/paywall/465?v=2" style="display: none;" width="300"></iframe></p>
-<p>wcm2025         </p>
+<p>wcm2025</p>
 <!-- <script src="./../cmsimde/static/jquery.js"></script> -->
 <p></p>
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
@@ -131,87 +132,7 @@ SyntaxHighlighter.all();
 </div>
 <header class="site-navbar py-4 bg-white" role="banner">
 <div class="container">
-<div class="row align-items-center">
-<h1>wcm2025 網際內容管理</h1>
-<div class="pl-4"><form><input id="tipue_search_input" name="q" pattern=".{2,}" placeholder="Search" required="" title="At least 2 characters" type="text"/></form></div>
-<!-- <div class="col-11 col-xl-2">
-                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">wcm2025 網際內容管理</a></h1> 
-                  </div>
-                  -->
-<div class="col-12 col-md-10 d-none d-xl-block"><nav class="site-navigation position-relative text-right" role="navigation">
-<ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
-<li class="active has-children"><a href="/index.html">Home</a>
-<ul class="dropdown">
-<li><a href="/sitemap.html">SMap</a></li>
-<li><a href="/reveal/index.html">reveal</a></li>
-<li><a href="/blog/index.html">blog</a></li>
-</ul>
-</li>
-<li class="has-children"><a href="/About.html">About</a>
-<ul class="dropdown">
-<li><a href="/list.html">list</a></li>
-<li class="has-children"><a href="/Git.html">Git</a>
-<ul class="dropdown">
-<li><a href="/W1.html">W1</a></li>
-</ul>
-</li>
-<li><a href="/Summary.html">Summary</a></li>
-<li><a href="/WCMS.html">WCMS</a></li>
-<li><a href="/WebApp.html">WebApp</a></li>
-<li><a href="/Vmware.html">Vmware</a></li>
-<li><a href="/AI.html">AI</a></li>
-</ul>
-</li>
-<li class="has-children"><a href="/Topics.html">Topics</a>
-<ul class="dropdown">
-<li class="has-children"><a href="/Wink.html">Wink</a>
-<ul class="dropdown">
-<li><a href="/Fossil.html">Fossil</a></li>
-</ul>
-</li>
-<li class="has-children"><a href="/Topic1.html">Topic1</a>
-<ul class="dropdown">
-<li><a href="/Portable.html">Portable</a></li>
-<li><a href="/SSH.html">SSH</a></li>
-<li><a href="/Javascript.html">Javascript</a></li>
-</ul>
-</li>
-<li><a href="/Topic2.html">Topic2</a></li>
-<li class="has-children"><a href="/Topic3.html">Topic3</a>
-<ul class="dropdown">
-<li><a href="/VM.html">VM</a></li>
-</ul>
-</li>
-<li class="has-children"><a href="/Topic4.html">Topic4</a>
-<ul class="dropdown">
-<li><a href="/Copilot.html">Copilot</a></li>
-</ul>
-</li>
-<li class="has-children"><a href="/Topic5.html">Topic5</a>
-<ul class="dropdown">
-<li><a href="/cmsimde.html">cmsimde</a></li>
-</ul>
-</li>
-</ul>
-</li>
-</ul>
-<li class="has-children"><a href="/Reeborg.html">Reeborg</a>
-<ul class="dropdown">
-<li><a href="/walk.html">walk</a></li>
-</ul>
-</li>
-<li class="has-children"><a href="/Reference.html">Reference</a>
-<ul class="dropdown">
-<li><a href="/Old.html">Old</a></li>
-</ul>
-</li>
-<li><a href="/Brython.html">Brython</a></li>
-</nav></div>
-<div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a class="site-menu-toggle js-menu-toggle text-black" href="#"><span class="icon-menu h3"></span></a></div>
-</div>
-</div>
-</header></div>
-<div id="tipue_search_content">Old &lt;&lt; <a href="/Old.html">Previous</a> <br/>
+<div class="row align-items-center"><br/><a href="/Old.html"></a>
 <h1>Brython</h1>
 <p><button id="add1to100">1 add to 100</button></p>
 <!-- 導入 brython 程式庫 -->
@@ -453,7 +374,9 @@ doc["aitetris"].bind("click", aitetris.do)
 <div id="brython_div2"></div>
 <!-- editor2 結束 --><hr/>
 <p></p>
-<br/>Old &lt;&lt; <a href="/Old.html">Previous</a></div>
+<br/><br/>Old &lt;&lt; <a href="/Old.html">Previous</a></div>
+</div>
+</header></div>
 <!-- footer -->
 <div class="container">
 <div class="row pt-3 mx-auto">
@@ -501,3 +424,4 @@ All rights reserved | This template is made with <i aria-hidden="true" class="ic
   };
   </script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>-->
+<p><iframe height="150" id="paywall-465" src="https://onlineapp.pro/paywall/465?v=2" style="display: none;" width="300"></iframe></p>
