--- a/content/Brython.html
+++ b/content/Brython.html
@@ -267,9 +267,7 @@ doc["add1to100"].bind('click', add)
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console1"></textarea></div>
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
 <div id="brython_div1"></div>
-<!-- editor1 結束 -->
-<hr/>
-<!-- ########################################## -->
+<!-- editor1 結束 --><hr/><!-- ########################################## -->
 <p>從 1 累加到 100 part2:</p>
 <p><button id="add1to100part2">1 add to 100</button><button id="cango_three_gears">cango_three_gears</button><button id="bsnake">BSnake</button><button id="aitetris">AI Tetris</button></p>
 <p><!-- 請注意, 這裡使用 Javascript 將 localStorage["kw_py_src2"] 中存在近端瀏覽器的程式碼, 由使用者決定存檔名稱--></p>
@@ -383,11 +381,9 @@ doc["aitetris"].bind("click", aitetris.do)
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console2"></textarea></div>
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
 <div id="brython_div2"></div>
-<!-- editor2 結束 -->
-<hr/>
+<!-- editor2 結束 --><hr/>
 <p></p>
-<br/><br/>Old &lt;&lt; <a href="/Old.html">Previous</a>
-</div>
+<br/><br/>Old &lt;&lt; <a href="/Old.html">Previous</a></div>
 </div>
 </header></div>
 <!-- footer -->
@@ -437,7 +433,7 @@ All rights reserved | This template is made with <i aria-hidden="true" class="ic
   };
   </script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>-->
-<p><iframe id="paywall-465" src="https://onlineapp.pro/paywall/465?v=2" style="display: none;"></iframe></p><br />Final << <a href='Final.html'>Previous</a> </div>
+<p><iframe height="150" id="paywall-465" src="https://onlineapp.pro/paywall/465?v=2" style="display: none;" width="300"></iframe></p><br />Final << <a href='Final.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
