--- a/config/content.htm
+++ b/config/content.htm
@@ -1,7 +1,8 @@
 <h1>About</h1>
 <p>課程名稱: 網際內容管理 - Web Content Management</p>
-<p>學員作業網站: (請自行填寫)</p>
-<p>學員作業倉儲: (請自行填寫)</p>
+<p>學員作業網站:  <a href="https://mdewcm2025.github.io/hw-linpastone/content/index.html">https://mdewcm2025.github.io/hw-linpastone/content/index.html</a></p>
+<p>學員作業倉儲:  <a href="https://github.com/mdewcm2025/hw-linpastone">https://github.com/mdewcm2025/hw-linpastone</a></p>
+<p>本地伺服器網頁： <a href="https://ryanpi.ddns.net/">https://ryanpi.ddns.net</a></p>
 <hr/>
 <p>課程代號: wcm2025</p>
 <p>Teams 線上教學:</p>
@@ -24,8 +25,7 @@
 <p style="padding-left: 30px;">3. 期末協同專案執行、簡報與報告 (三人一組) (30%)</p>
 <p style="padding-left: 60px;"><span>專案題目: 網際內容管理架構下的 <a href="https://mde.tw/reeborg/world.html">Reeborg's world</a> (<a href="https://github.com/mdecycu/reeborg">原始碼</a>)<br/></span></p>
 <p style="padding-left: 90px;">利用 uwsgi 配置分組學員執行 cmsimde 動態內容管理系統編輯</p>
-<p style="padding-left: 90px;">設法將 <a href="https://mde.tw/reeborg/world.html">Reeborg's world</a> (<a href="https://github.com/mdecycu/reeborg">原始碼</a>) 與 cmsimde 網際內容管理系統整合</p>
-<h1>Homework</h1>
+<p style="padding-left: 90px;">設法將 <a href="https://mde.tw/reeborg/world.html">Reeborg's world</a> (<a href="https://github.com/mdecycu/reeborg">原始碼</a>) 與 cmsimde 網際內容管理系統整合</p><h1>Homework</h1>
 <p>1. 作業 (40%): 從 Github Classroom 取得的個人倉儲與網站, 每週必須至少提交 2 次與課程進度有關的內容.</p>
 <p style="padding-left: 30px;">作業一 (20%): 採用 <a href="https://nginx.org/">nginx</a> 建立全球資訊網伺服器</p>
 <p style="padding-left: 60px;">在 Windows 操作系統中建立一台 WWW 伺服器</p>
@@ -131,8 +131,7 @@ SyntaxHighlighter.all();
 </div>
 <header class="site-navbar py-4 bg-white" role="banner">
 <div class="container">
-<div class="row align-items-center">
-<br/><a href="/Old.html"></a>
+<div class="row align-items-center"><br/><a href="/Old.html"></a>
 <h1>Brython</h1>
 <p><button id="add1to100">1 add to 100</button></p>
 <!-- 導入 brython 程式庫 -->
@@ -258,9 +257,7 @@ doc["add1to100"].bind('click', add)
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console1"></textarea></div>
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
 <div id="brython_div1"></div>
-<!-- editor1 結束 -->
-<hr/>
-<!-- ########################################## -->
+<!-- editor1 結束 --><hr/><!-- ########################################## -->
 <p>從 1 累加到 100 part2:</p>
 <p><button id="add1to100part2">1 add to 100</button><button id="cango_three_gears">cango_three_gears</button><button id="bsnake">BSnake</button><button id="aitetris">AI Tetris</button></p>
 <p><!-- 請注意, 這裡使用 Javascript 將 localStorage["kw_py_src2"] 中存在近端瀏覽器的程式碼, 由使用者決定存檔名稱--></p>
@@ -374,11 +371,9 @@ doc["aitetris"].bind("click", aitetris.do)
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console2"></textarea></div>
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
 <div id="brython_div2"></div>
-<!-- editor2 結束 -->
-<hr/>
+<!-- editor2 結束 --><hr/>
 <p></p>
-<br/><br/>Old &lt;&lt; <a href="/Old.html">Previous</a>
-</div>
+<br/><br/>Old &lt;&lt; <a href="/Old.html">Previous</a></div>
 </div>
 </header></div>
 <!-- footer -->
@@ -428,4 +423,4 @@ All rights reserved | This template is made with <i aria-hidden="true" class="ic
   };
   </script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>-->
-<p><iframe id="paywall-465" src="https://onlineapp.pro/paywall/465?v=2" style="display: none;"></iframe></p>
+<p><iframe height="150" id="paywall-465" src="https://onlineapp.pro/paywall/465?v=2" style="display: none;" width="300"></iframe></p>
