--- a/content/Final.html
+++ b/content/Final.html
@@ -223,8 +223,7 @@ SyntaxHighlighter.all();
 </div>
 <header class="site-navbar py-4 bg-white" role="banner">
 <div class="container">
-<div class="row align-items-center">
-<br/><a href="/Old.html"></a>
+<div class="row align-items-center"><br/><a href="/Old.html"></a>
 <br />Midterm << <a href='Midterm.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
