--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -3,6 +3,7 @@
 <p>學員作業網站:  <a href="https://mdewcm2025.github.io/hw-linpastone/content/index.html">https://mdewcm2025.github.io/hw-linpastone/content/index.html</a></p>
 <p>學員作業倉儲:  <a href="https://github.com/mdewcm2025/hw-linpastone">https://github.com/mdewcm2025/hw-linpastone</a></p>
 <p>本地伺服器網頁： <a href="https://ryanpi.ddns.net/">https://ryanpi.ddns.net</a></p>
+<p><span>reeborg網頁： <a href="https://mdewcm2025.github.io/hw-linpastone/reeborg">https://mdewcm2025.github.io/hw-linpastone/reeborg</a></span></p>
 <hr/>
 <p>課程代號: wcm2025</p>
 <p>Teams 線上教學:</p>
@@ -25,9 +26,9 @@
 <p style="padding-left: 30px;">3. 期末協同專案執行、簡報與報告 (三人一組) (30%)</p>
 <p style="padding-left: 60px;"><span>專案題目: 網際內容管理架構下的 <a href="https://mde.tw/reeborg/world.html">Reeborg's world</a> (<a href="https://github.com/mdecycu/reeborg">原始碼</a>)<br/></span></p>
 <p style="padding-left: 90px;">利用 uwsgi 配置分組學員執行 cmsimde 動態內容管理系統編輯</p>
-&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
+<p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD</p>
 <p style="padding-left: 90px;">設法將 <a href="https://mde.tw/reeborg/world.html">Reeborg's world</a> (<a href="https://github.com/mdecycu/reeborg">原始碼</a>) 與 cmsimde 網際內容管理系統整合</p><h1>Homework</h1>
-=======
+<p>=======</p>
 <p style="padding-left: 90px;">設法將 <a href="https://mde.tw/reeborg/world.html">Reeborg's world</a> (<a href="https://github.com/mdecycu/reeborg">原始碼</a>) 與 cmsimde 網際內容管理系統整合</p>
 <p style="padding-left: 90px;"></p>
 <p style="padding-left: 90px;"></p>
@@ -43,7 +44,8 @@
 <p>過程中可以利用 mind-map 呈現伺服器架構與設置內容</p>
 <p>Task4:<span> </span><span>導入 Reeborg 網際機器人程式環境</span></p>
 <p>目的: 利用 2D Reeborg 的網際機器人程式套件, 說明網際協同設計的發展, 可以透過 WWW 同步設計, 建立更多虛擬整合 (Cyber-Physical Integration) 應用.</p>
-<p><iframe id="paywall-465" src="https://onlineapp.pro/paywall/465?v=2" style="display: none;"></iframe></p><h2>Task1</h2>
+<p><iframe height="150" id="paywall-465" src="https://onlineapp.pro/paywall/465?v=2" style="display: none;" width="300"></iframe></p>
+<h2>Task1</h2>
 <h4>自行製作可攜程式系統</h4>
 <p>此作業的目的在展示如何利用既有的 Python 可攜系統建立各版本的 Python 可攜環境.</p>
 <p>以下為操作步驟:</p>
@@ -62,8 +64,9 @@
 <p><iframe height="150" id="paywall-465" src="https://onlineapp.pro/paywall/465?v=2" style="display: none;" width="300"></iframe></p>
 <p><iframe height="150" id="paywall-465" src="https://onlineapp.pro/paywall/465?v=2" style="display: none;" width="300"></iframe></p>
 <p><iframe height="150" id="paywall-465" src="https://onlineapp.pro/paywall/465?v=2" style="display: none;" width="300"></iframe></p>
-<p><iframe height="150" id="paywall-465" src="https://onlineapp.pro/paywall/465?v=2" style="display: none;" width="300"></iframe></p><h1>Homework</h1>
-&gt;&gt;&gt;&gt;&gt;&gt;&gt; b81180575848c63f1bde68a7901cd75a7e77f126
+<p><iframe height="150" id="paywall-465" src="https://onlineapp.pro/paywall/465?v=2" style="display: none;" width="300"></iframe></p>
+<h1>Homework</h1>
+<p>&gt;&gt;&gt;&gt;&gt;&gt;&gt; b81180575848c63f1bde68a7901cd75a7e77f126</p>
 <p>1. 作業 (40%): 從 Github Classroom 取得的個人倉儲與網站, 每週必須至少提交 2 次與課程進度有關的內容.</p>
 <p style="padding-left: 30px;">作業一 (20%): 採用 <a href="https://nginx.org/">nginx</a> 建立全球資訊網伺服器</p>
 <p style="padding-left: 60px;">在 Windows 操作系統中建立一台 WWW 伺服器</p>
