--- a/content/index.html
+++ b/content/index.html
@@ -146,7 +146,8 @@ img.add_border {
 <p>學員作業網站:  <a href="https://mdewcm2025.github.io/hw-linpastone/content/index.html">https://mdewcm2025.github.io/hw-linpastone/content/index.html</a></p>
 <p>學員作業倉儲:  <a href="https://github.com/mdewcm2025/hw-linpastone">https://github.com/mdewcm2025/hw-linpastone</a></p>
 <p>本地伺服器網頁： <a href="https://ryanpi.ddns.net/">https://ryanpi.ddns.net</a></p>
-<p><span>reeborg網頁： <a href="https://w51.mde.nfu.edu.tw/reeborg/">https://w51.mde.nfu.edu.tw/reeborg</a></span></p>
+<p><span>reeborg網頁： <a href="https://mdewcm2025.github.io/hw-linpastone/reeborg">https://mdewcm2025.github.io/hw-linpastone/reeborg</a></span></p>
+<p><span>reeborg倉儲：<a href="https://github.com/linpastone/reeborg">https://github.com/linpastone/reeborg</a></span></p>
 <hr/>
 <p>課程代號: wcm2025</p>
 <p>Teams 線上教學:</p>
@@ -170,8 +171,7 @@ img.add_border {
 <p style="padding-left: 60px;"><span>專案題目: 網際內容管理架構下的 <a href="https://mde.tw/reeborg/world.html">Reeborg's world</a> (<a href="https://github.com/mdecycu/reeborg">原始碼</a>)<br/></span></p>
 <p style="padding-left: 90px;">利用 uwsgi 配置分組學員執行 cmsimde 動態內容管理系統編輯</p>
 <p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD</p>
-<p style="padding-left: 90px;">設法將 <a href="https://mde.tw/reeborg/world.html">Reeborg's world</a> (<a href="https://github.com/mdecycu/reeborg">原始碼</a>) 與 cmsimde 網際內容管理系統整合</p>
-<br /> <a href='Homework-1.html'>Next</a> >> Homework-1</div>
+<p style="padding-left: 90px;">設法將 <a href="https://mde.tw/reeborg/world.html">Reeborg's world</a> (<a href="https://github.com/mdecycu/reeborg">原始碼</a>) 與 cmsimde 網際內容管理系統整合</p><br /> <a href='Homework-1.html'>Next</a> >> Homework-1</div>
         
     <!-- footer -->
       <div class="container">
