--- a/content/Homework-1.html
+++ b/content/Homework-1.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Homework-1.html'>Homework-1</a><li class='has-children'><a href='Tasks.html'>Tasks</a><ul class='dropdown'><li><a href='Task1.html'>Task1</a></li></ul><li class='has-children'><a href='Homework-2.html'>Homework-2</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a><li><a href='HW2.html'>HW2</a></li></ul><li><a href='Midterm.html'>Midterm</a><li><a href='Final.html'>Final</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Reeborg.html'>Reeborg</a><ul class='dropdown'><li><a href='東西向拔蘿蔔.html'>東西向拔蘿蔔</a></li></ul><li><a href='Homework-1.html'>Homework-1</a><li class='has-children'><a href='Tasks.html'>Tasks</a><ul class='dropdown'><li><a href='Task1.html'>Task1</a></li></ul><li class='has-children'><a href='Homework-2.html'>Homework-2</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a><li><a href='HW2.html'>HW2</a></li></ul><li><a href='Midterm.html'>Midterm</a><li><a href='Final.html'>Final</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,12 +142,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='Tasks.html'>Next</a> >> Tasks<br /><h1>Homework-1</h1>
+    <div id="tipue_search_content">東西向拔蘿蔔 << <a href='東西向拔蘿蔔.html'>Previous</a> <a href='Tasks.html'>Next</a> >> Tasks<br /><h1>Homework-1</h1>
 <p>=======</p>
 <p style="padding-left: 90px;">設法將 <a href="https://mde.tw/reeborg/world.html">Reeborg's world</a> (<a href="https://github.com/mdecycu/reeborg">原始碼</a>) 與 cmsimde 網際內容管理系統整合</p>
 <p style="padding-left: 90px;"></p>
 <p style="padding-left: 90px;"></p>
-<br />About << <a href='About.html'>Previous</a> <a href='Tasks.html'>Next</a> >> Tasks</div>
+<br />東西向拔蘿蔔 << <a href='東西向拔蘿蔔.html'>Previous</a> <a href='Tasks.html'>Next</a> >> Tasks</div>
         
     <!-- footer -->
       <div class="container">
